getFirst() is not available on Android